[gd_scene load_steps=3 format=3 uid="uid://cmnp456di7jmf"]

[ext_resource type="Script" path="res://common/day_menu.gd" id="1_itm88"]
[ext_resource type="PackedScene" uid="uid://dqk3bucs0n7pq" path="res://common/exit_button.tscn" id="2_dxtba"]

[node name="Menu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -27.5
offset_right = 173.5
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_itm88")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GetInputButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Get Input"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RunButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Run
"

[node name="InputChoices" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back
"

[node name="ExitButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_dxtba")]
layout_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="button_up" from="MarginContainer/VBoxContainer/GetInputButton" to="." method="_on_get_input_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
